@@ -22,6 +22,8 @@ ChangeLog about GNU GLOBAL
 ***** ** ****, Shigio Yamaguchi  <shigio@gnu.org>
 
 	* gctags.c: allows second argument in *ENTRY for 4.3BSD.
+	* split.c: splitting function added.
+	* strbuf.c: strbuf_putn() added.
 
 March 30 2002, Shigio Yamaguchi  <shigio@gnu.org>
 
